# geosci-boilerplate

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  setup.py  test_environment.py
src/: config.py
src/data/: make_dataset.py
